# fuse-control-plane

./: .env.example  .gitignore  CLAUDE.md  DEPLOY-VSCODE.md  Dockerfile  Dockerfile.collector  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run.sh  startup_company.sh  startup_fuse.sh  startup_vendor.sh
backend/: .gitignore  Dockerfile  database.py  gateway.py  go.mod  main.go  main.py  models.py  requirements.txt  schemas.py
collector/: __main__.py  models.py
collector/github/: audit.py  client.py  credentials.py  installations.py  models.py  pats.py  revoke.py
collector/graph/: activity.py  client.py  grants.py  resolve.py  revoke.py
collector/output/: report.py
collector/snapshot/: store.py
common/: crypto.py
company_api/: main.py
connectors/: __init__.py  azure.py  base.py  demo_company.py  demo_vendor.py  github.py
frontend/: index.html
fuse/: main.py  risk.py  state.py
fuse/static/: index.html  presentation.html
infrastructure/: main.tf  outputs.tf  variables.tf
web/: config.py  crypto.py  db.py  jobs.py  main.py  models.py  seed.py  templating.py  utils.py
web/routers/: grants.py  groups.py  runs.py  tenants.py
web/static/: app.js  style.css
web/templates/: base.html
web/templates/grants/: detail.html  group_list.html  list.html
web/templates/runs/: detail.html
web/templates/tenants/: edit.html  list.html
