[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuse-collector"
version = "0.1.0"
description = "Out-of-band OAuth grant collector for Azure/Entra"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.28.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42.0",
    "itsdangerous>=2.1",
    "python-dotenv>=1.0",
]

[project.scripts]
fuse-collect = "collector.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["collector", "web"]
